https_test/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
  selector:
    app: web
