https_test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: handh-ingress
  #ingressClassName: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Forwarded-For $http_x_forwarded_for";
spec:
  tls:
  - hosts:
    - web.handh.io
    secretName: httpstls
  rules:
  - host: web.handh.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port: 
              number: 80
